--- a/app/components/feedback/template.html
+++ b/app/components/feedback/template.html
@@ -1,17 +1,18 @@
 <h1>Feedback</h1>
-<form>
-<div class="form-group">
-    <label for="name">Your name</label>
-    <input type="text" class="form-control" id="name" placeholder="Enter your name">
+<div [hidden]="submitted">
+	<form (submit)="onSubmit()" #feedbackForm="ngForm">
+	<div class="form-group">
+	    <label for="name">Your name</label>
+	    <input type="text" class="form-control" required [(ngModel)]="model.name" id="name" name="name" placeholder="Enter your name">
+	</div>
+	<div class="form-group">
+	    <label for="email">Email address</label>
+	    <input type="email" class="form-control" [(ngModel)]="model.email" id="email" name="email" placeholder="Enter email">
+	</div>
+	<div class="form-group">
+	    <label for="message">Message</label>
+	    <textarea class="form-control" id="message" name="message" rows="3"></textarea>
+	  </div>
+	<button type="submit" class="btn btn-primary" [disabled]="!feedbackForm.form.valid">Submit</button>
+	</form>
 </div>
-<div class="form-group">
-    <label for="email">Email address</label>
-    <input type="email" class="form-control" id="email" placeholder="Enter email">
-</div>
-<div class="form-group">
-    <label for="message">Message</label>
-    <textarea class="form-control" id="message" rows="3"></textarea>
-  </div>
-<button type="submit" class="btn btn-primary">Submit</button>
-</form>
-
